# MetaLoader

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/: GameHook.cpp  GameHook.hpp  Loader.cpp  Loader.hpp  LoaderUI.cpp  LoaderUI.hpp  Locales.hpp  Localization.cpp  Localization.hpp  ModLoadOrder.cpp  ModLoadOrder.hpp  Settings.cpp  Settings.hpp  Version.cpp  Version.hpp  main.cpp  main.hpp  memory.cpp  memory.hpp  utils.cpp  utils.hpp
